2012-09-08 Philippe De Swert <philippedeswert@gmail.com>

	* gpeiconlistitem.c dirbrowser.c colordialog.c gpetimesel.c color-slider.c gpeclockface.c 
	  gpeiconlistview.c gtksimplemenu.c : Update to support and work well with newer glib 2.32
	* gpehelp.c : Apply patch to remove double include. Thanks go to Pacho Ramos and Neil Williams 

2009-09-19  Graham Cobb  <g+770@cobb.uk.net>

	* hildon/gpe-fremantle.conf: Add backup file for Fremantle

	* Makefile.am: Install correct backup configuration file based on Maemo version

	* configure.ac: Check Maemo version

2009-04-15 Ned Ludd  <solar@gentoo.org>
	* gpe-base/libgpewidget: pixmaps.c gpe/pixmaps.h 
	* Icon Dir Unification. /usr/share/gpe/pixmaps/ -> /usr/share/pixmaps/gpe/
	* Targeted for gpe-3.0 release.

2009-01-21  Graham Cobb  <g+770@cobb.uk.net>

	* debian/control (Depends): Add ${misc:Depends} (dh compat level 4)

	* debian/rules: Remove debhelper compatability 3

	* debian/compat: Add file to specify compatability level 4

2008-09-06  Phil Blundell  <pb@reciva.com>

	* po/da.po: Update from TP.

2008-08-13  Phil Blundell  <pb@reciva.com>

	* configure.ac (ALL_LINGUAS): Auto-detect all PO files.
	* po/ga.po, po/sv.po, po/ja.po, po/zh_CN.po: Update from TP.
	* mkinstalldirs: Remove from version control.

2008-07-11 Florian Boor <florian@kernelconcepts.de>

	* Release 0.117
	* Makefile.am: package pot file

2008-05-19 Florian Boor <florian@kernelconcepts.de>

	* Release 0.116

2008-05-19  Florian Boor <florian@kernelconcepts.de>

	* gpeclockface.c: Use new Cairo API in GDK. Fixes #73

2008-05-13  Florian Boor <florian@kernelconcepts.de>

	* gpe-tp.am: Switch to new translation code.
	* confgure.ac: Add several new translations.
	* po/*: Major translations update. 
	* colorrenderer.c: Add sanity check to avoid potential segfault.

2008-01-15  Graham Cobb  <g+770@cobb.uk.net>

	* gtkdatecombo.c: On chinook use HildonCalendar instead of GtkCalendar

2007-11-05  Graham Cobb  <g+770@cobb.uk.net>
