@@ -1,3 +1,8 @@
+2012-09-15 Philippe De Swert <philippedeswert@gmail.com>
+
+	* Makefile.am: Add -lm to linker options to fix build issues for packages depending
+	 	       on libgpewidget
+
 2012-09-08 Philippe De Swert <philippedeswert@gmail.com>
 
 	* gpeiconlistitem.c dirbrowser.c colordialog.c gpetimesel.c color-slider.c gpeclockface.c 
